# ckanext-validate

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/validate/: jobs.py  plugin.py  resource_hooks.py
ckanext/validate/actions/: action.py
ckanext/validate/assets/: script.js  webassets.yml
ckanext/validate/assets/css/: validate.css
ckanext/validate/auth/: validation.py
ckanext/validate/blueprints/: resource.py
ckanext/validate/logic/: action.py
ckanext/validate/migration/validate/: alembic.ini  env.py
ckanext/validate/migration/validate/versions/: 001_resource_validation.py
ckanext/validate/model/: __init__.py  validation.py
ckanext/validate/schemas/: dataset.yaml
ckanext/validate/templates/: base.html
ckanext/validate/templates/package/: resource_read.html  resource_validate.html
ckanext/validate/templates/package/snippets/: resource_item.html
ckanext/validate/templates/scheming/display_snippets/: validation_status.html
ckanext/validate/tests/: conftest.py  test_action.py  test_auth.py  test_jobs.py  test_permissions.py  test_plugin.py  test_plugin_contract.py  test_resource_hooks.py
ckanext/validate/tests/files_test/: bike-errors.csv  so-wrong.csv  valid.csv
docs/: model.md
