[project]
name = "ckanext-validate"
version = "0.0.1"
description = "A Simple CKAN extension to validate tabular data."
readme = "README.md"
authors = [
    {name = "Patricio Del Boca", email = "patricio.delboca@okfn.org"}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

keywords = [ "CKAN", "validation", "dataquality", "frictionless", ]
dependencies = []

[project.urls]
Homepage = "https://github.com/okfn/ckanext-validate"

[project.entry-points."ckan.plugins"]
validate = "ckanext.validate.plugin:ValidatePlugin"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
